--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="pt-br">
 
 <head>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Bikcraft - Bicicletas Elétricas</title>
-  <meta name="description" content="Bicicletas Elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
-  <link rel="stylesheet" href="./CSS/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
   <header class="header-bg">
     <div class="header">
-      <a href="./"><img src="img/bikcraft.svg" alt="Bikcraft">
+      <a href="./">
+        <img src="./img/bikcraft.svg" alt="Bikcraft">
       </a>
 
       <nav aria-label="primaria">
@@ -27,6 +27,17 @@
       </nav>
     </div>
   </header>
+
+  <main class="introducao-bg">
+    <div class="introducao">
+      <div class="introducao-conteudo">
+        <h1>Bicicletas feitas sob medida<span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <button class="botao"><a href="./bicicletas.html" class="botao">Escolha a sua</a></button>
+      </div>
+      <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+    </div>
+  </main>
 </body>
 
 </html>
