--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
       <div class="introducao-conteudo">
         <h1>Bicicletas feitas sob medida<span>.</span></h1>
         <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <button class="botao"><a href="./bicicletas.html" class="botao">Escolha a sua</a></button>
+        <a href="./bicicletas.html">Escolha a sua</a>
       </div>
-      <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+      <div>
+        <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+      </div>
     </div>
   </main>
 </body>
