--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -46,7 +46,7 @@
         <img src="../img/bicicleta/nimbus3.jpg" alt="">
       </div>
       <div class="bicicleta-conteudo">
-        <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-l cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a class="botao" href="../orcamento.html">Comprar Agora</a>
           <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt=""> Emprega em 5 dias </span>
@@ -62,7 +62,7 @@
           </li>
           <li>
             <img src="../img/icones/velocidade.svg" alt="">
-            <h3 class="font-1-m cor-0">50 Km/h</h3>
+            <h3 class="font-1-m cor-0">45 Km/h</h3>
             <p class="font-2-xs cor-5">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
           </li>
           <li>
@@ -101,10 +101,10 @@
 
     <ul>
       <li>
-        <a href="./magic.html">
-          <img src="../img/bicicletas/magic.jpg" alt="Bicicleta preta">
-          <h3 class="font-1-xl">Magic Might</h3>
-          <span class="font-2-m cor-8">R$ 2499</span>
+        <a href="./nimbus.html">
+          <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
       <li>
