--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Termos e Condições | Bikcraft</title>
+  <title>Contato | Bikcraft</title>
   <meta name="description" content="Termos e Condições.">
 
   <link rel="stylesheet" href="./css/style.css">
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
-<body id="termos">
+<body id="contato">
   <header class="header-bg">
     <div class="header container">
       <a href="./">
@@ -35,22 +35,63 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-5">Termos de uso</p>
-        <h1 class="font-1-xxl cor-0">Termos e Condições<span class="cor-p1">.</span></h1>
+        <p class="font-2-l-b cor-5">Respostas em até 24h</p>
+        <h1 class="font-1-xxl cor-0">nosso contato<span class="cor-p1">.</span></h1>
       </div>
     </div>
 
-    <div class="termos font-2-s cor-10 container">
-      <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
-      <p>1.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-      <p>1.2 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-      <p>1.3 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-      <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
-      <p>2.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
-      <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
-      <p>3.1 Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto. Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitamos PIX e Boleto.</p>
+    <div class="contato container">
+      <section class="contato-dados" aria-label="Endereço">
+        <h2 class="font-1-m cor-0">Lojas Online</h2>
+        <div class="contato-endereco font-2-s cor-4">
+          <p>Rua Obi-wan Kenobi, 35</p>
+          <p>Mos Eisley - OE</p>
+          <p>Tatooine - Sovaco da Galáxia </p>
+        </div>
+        <address class="contato-meios font-2-s cor-4">
+          <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
+          <a href="mailto:assistencia@bikcraft.com">assistencia@bikcraft.com</a>
+          <a href="tel:+55219999999">+55 21 99999-9999</a>
+        </address>
+        <div class="contato-redes">
+          <a href="./">
+            <img src="./img/redes/instagram-p.svg" alt="instagram">
+          </a>
+          <a href="./">
+            <img src="./img/redes/youtube-p.svg" alt="Youtube">
+          </a>
+          <a href="./">
+            <img src="./img/redes/facebook-p.svg" alt="Facebook">
+          </a>
+        </div>
+      </section>
+      <section class="contato-formulario" aria-label="Formulário">
+        <form class="form" action="./contato.html">
+          <div>
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" placeholder="Seu nome">
+          </div>
+          <div>
+            <label for="telefone">Telefone</label>
+            <input type="text" id="telefone" name="telefone" placeholder="(21) 99999-9999">
+          </div>
+          <div class="col-2">
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email" placeholder="contato@email.com">
+          </div>
+          <div class="col-2">
+            <label for="mensagem">Mensagem</label>
+            <textarea rows="5" id="mensagem" name="mensagem" placeholder="O que você precisa?"></textarea>
+          </div>
+          <button class="botao col-2">Enviar Mensagem</button>
+        </form>
+      </section>
     </div>
   </main>
+
+  <article>
+
+  </article>
 
   <footer class="footer-bg">
     <div class="footer container">
