--- a/bikcraft/contato.html
+++ b/bikcraft/contato.html
@@ -71,7 +71,7 @@
         </div>
       </section>
       <section class="contato-formulario" aria-label="Formulário">
-        <form class="form" action="./contato.html">
+        <form class="form" action="./enviar.php" method="post">
           <div>
             <label for="nome">Nome</label>
             <input type="text" id="nome" name="nome" placeholder="Seu nome">
@@ -82,7 +82,7 @@
           </div>
           <div class="col-2">
             <label for="email">E-mail</label>
-            <input type="email" id="email" name="email" placeholder="contato@email.com">
+            <input type="email" id="email" name="email" placeholder="contato@email.com" required>
           </div>
           <div class="col-2">
             <label for="mensagem">Mensagem</label>
@@ -167,6 +167,7 @@
     </div>
   </footer>
   <script src="./js/script.js"></script>
+  <script src="./js/formulario.js"></script>
 </body>
 
 </html>
