--- a/bikcraft/index.html
+++ b/bikcraft/index.html
@@ -144,7 +144,7 @@
           <li>Suporte de 08h às 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a class="botao seguntario" href="./orcamento.html">Inscreva-se</a>
+        <a class="botao seguntario" href="./orcamento.html?tipo=seguro&produto=prata">Inscreva-se</a>
       </div>
 
       <div class="seguros-item">
@@ -158,7 +158,7 @@
           <li>Desconto em parceiros</li>
           <li>Scesso ao Club Bikcraft</li>
         </ul>
-        <a class="botao" href="./orcamento.html">Inscreva-se</a>
+        <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro">Inscreva-se</a>
       </div>
     </div>
   </article>
