--- a/bikcraft/orcamento.html
+++ b/bikcraft/orcamento.html
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <form class="orcamento container" action="./">
+    <form class="orcamento container" action="./enviar.php" method="post">
       <div class="orcamento-produto">
         <h2 class="font-1-xs cor-5">Bikcraft ou Seguro?</h2>
 
@@ -121,7 +121,7 @@
         </div>
         <div class="col-2">
           <label for="email">E-mail</label>
-          <input type="email" id="email" name="email">
+          <input type="email" id="email" name="email" required>
         </div>
         <h2 class="font-1-xs cor-9 col-2">entrega</h2>
         <div>
@@ -191,6 +191,7 @@
     </div>
   </footer>
   <script src="./js/script.js"></script>
+  <script src="./js/formulario.js"></script>
 </body>
 
 </html>
